--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
+    "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-permissions": "^5.4.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.11.1",
+    "react-native-share": "^12.1.1",
+    "react-native-svg": "^15.12.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -22,17 +38,17 @@
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.82.0",
-    "@react-native/eslint-config": "0.82.0",
-    "@react-native/metro-config": "0.82.0",
-    "@react-native/typescript-config": "0.82.0",
+    "@react-native/babel-preset": "0.81.1",
+    "@react-native/eslint-config": "0.81.1",
+    "@react-native/metro-config": "0.81.1",
+    "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.1",
+    "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
+    "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
   "engines": {
